@@ -1,0 +1,42 @@
+// Copyright 2004-2011 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle
+{
+	using System;
+
+	using Castle.Core;
+	using Castle.MicroKernel.Context;
+	using Castle.MicroKernel.Handlers;
+
+	public class StubGenericImplementationMatchingStrategy : IGenericImplementationMatchingStrategy
+	{
+		private readonly Func<ComponentModel, CreationContext, Type[]> result;
+
+		public StubGenericImplementationMatchingStrategy(Func<ComponentModel, CreationContext, Type[]> result)
+		{
+			this.result = result;
+		}
+
+		public StubGenericImplementationMatchingStrategy(params Type[] result)
+		{
+			this.result = delegate { return result; };
+		}
+
+		public Type[] GetGenericArguments(ComponentModel model, CreationContext context)
+		{
+			return result(model, context);
+		}
+	}
+}
